--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF_8">
         <meta name="viewport" content="width=device-width, initial -scale=1.0">
         <title>Myself</title>
-        <link rel="stylesheet" href="./boot/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/bootstrap.min.css">
         <script src="./boot/js/bootstrap.js"></script>
         <style>
             .size{
